# SearchEngine

./: .gitignore  CMakeLists.txt  output.txt
data/stop_words/: en_stop_words.txt
include/offline/: DirectoryScanner.h  KeywordProcessor.h
src/offline/: DirectoryScanner.cpp  KeywordProcessor.cpp
test/: test_KeywordProcess.cpp  test_file.cpp  test_keyword.cpp  test_map.cpp  test_scanner.cpp  test_tokenize.cpp
